[gd_scene load_steps=13 format=3 uid="uid://bsc7ly8btdd5l"]

[ext_resource type="Shader" path="res://Shaders/player.gdshader" id="1_6mmgm"]
[ext_resource type="Script" path="res://Scenes/SpellScenes/close_circuit.gd" id="1_aiu3e"]
[ext_resource type="Script" path="res://Scenes/SpellScenes/close_circuit_stat_sheet.gd" id="1_akfeh"]
[ext_resource type="Texture2D" uid="uid://d34y634rsmd7c" path="res://Sprites/Sprite Effects/Thunderstrike wo blur.png" id="3_us74g"]
[ext_resource type="Texture2D" uid="uid://cs22du8ly5el7" path="res://Sprites/Sprite Effects/Thunder projectile1 wo blur.png" id="4_y0k57"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_361h4"]
shader = ExtResource("1_6mmgm")
shader_parameter/speed = 1.0
shader_parameter/tint = Color(1, 1, 0, 1)
shader_parameter/span = 1.0
shader_parameter/start_time = 0.0
shader_parameter/applied = true

[sub_resource type="Animation" id="Animation_tw108"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ThunderProjectile1WoBlur:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ThunderstrikeWoBlur:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ThunderstrikeWoBlur2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ThunderstrikeWoBlur3:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ThunderstrikeWoBlur4:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ThunderstrikeWoBlur:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ThunderstrikeWoBlur2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ThunderstrikeWoBlur3:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_g0e5i"]
resource_name = "hit"
length = 0.24
loop_mode = 1
step = 0.06
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ThunderstrikeWoBlur:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ThunderProjectile1WoBlur:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ThunderstrikeWoBlur2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ThunderstrikeWoBlur3:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ThunderstrikeWoBlur:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ThunderstrikeWoBlur2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ThunderstrikeWoBlur3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SpellHitBox/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8e0v4"]
resource_name = "travel"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ThunderProjectile1WoBlur:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ThunderstrikeWoBlur2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ThunderstrikeWoBlur3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ThunderstrikeWoBlur:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7lh65"]
resource_name = "strike"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ThunderstrikeWoBlur4:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ThunderstrikeWoBlur4:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 0.55),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"strike"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ThunderstrikeWoBlur:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ThunderstrikeWoBlur2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ThunderstrikeWoBlur3:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ru6xs"]
_data = {
"RESET": SubResource("Animation_tw108"),
"hit": SubResource("Animation_g0e5i"),
"strike": SubResource("Animation_7lh65"),
"travel": SubResource("Animation_8e0v4")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m065x"]
radius = 5.0
height = 28.0

[node name="close_circuit" type="CharacterBody2D" node_paths=PackedStringArray("spell_stat_sheet")]
material = SubResource("ShaderMaterial_361h4")
script = ExtResource("1_aiu3e")
spell_stat_sheet = NodePath("spell_stat_sheet")

[node name="spell_stat_sheet" type="Node2D" parent="."]
script = ExtResource("1_akfeh")
knockback_strength = 25.0
damage = 25.0
poise_damage = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ru6xs")
}

[node name="ThunderProjectile1WoBlur" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("4_y0k57")
hframes = 5

[node name="SpellHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpellHitBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_m065x")

[node name="ThunderstrikeWoBlur" type="Sprite2D" parent="." groups=["shockeffect"]]
visible = false
use_parent_material = true
rotation = 1.5708
texture = ExtResource("3_us74g")
offset = Vector2(0, -26)
hframes = 13

[node name="ThunderstrikeWoBlur2" type="Sprite2D" parent="." groups=["shockeffect"]]
visible = false
use_parent_material = true
position = Vector2(13, -29)
rotation = 3.82925
texture = ExtResource("3_us74g")
offset = Vector2(0, -26)
hframes = 13

[node name="ThunderstrikeWoBlur3" type="Sprite2D" parent="." groups=["shockeffect"]]
visible = false
use_parent_material = true
position = Vector2(-13, -24)
rotation = 0.890118
texture = ExtResource("3_us74g")
offset = Vector2(0, -26)
hframes = 13

[node name="ThunderstrikeWoBlur4" type="Sprite2D" parent="." groups=["shockeffect"]]
visible = false
use_parent_material = true
scale = Vector2(2, 2)
texture = ExtResource("3_us74g")
offset = Vector2(0, -26)
hframes = 13

[connection signal="area_entered" from="SpellHitBox" to="." method="_on_spell_hit_box_area_entered"]
[connection signal="body_entered" from="SpellHitBox" to="." method="_on_spell_hit_box_body_entered"]
